--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
                         <p class="gender">(he/him)</p>
                         <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet ante sed nisi ullamcorper sodales. Sed non erat quam.</p>
                         <div class="social-media">
-                            <a id="insta" class="social-icon" href="https://www.instagram.com/gu_christopher/">
+                            <a id="insta" class="social-icon" href="https://www.instagram.com/gu_christopher/" target="_blank">
                                 <img src="img/insta.png">
                             </a>
-                            <a id="linkedin" class="social-icon" href="https://www.linkedin.com/in/christopherlgu/">
+                            <a id="linkedin" class="social-icon" href="https://www.linkedin.com/in/christopherlgu/" target="_blank">
                                 <img src="img/linkedin.png">
                             </a>
-                            <a id="tiktok" class="social-icon" href="https://www.tiktok.com/@gu_christopher">
+                            <a id="tiktok" class="social-icon" href="https://www.tiktok.com/@gu_christopher" target="_blank">
                                 <img src="img/tiktok.png">
                             </a>
-                            <a id="twitter" class="social-icon" href="https://twitter.com/gu_christopher">
+                            <a id="twitter" class="social-icon" href="https://twitter.com/gu_christopher" target="_blank">
                                 <img src="img/twitter.png">
                             </a>
-                            <a id="cv" class="social-icon" href="#">
+                            <a id="cv" class="social-icon" href="https://drive.google.com/file/d/1P33RP7g4xnzD5atz8-Gq26-Yub0lu5Ap/view?usp=sharing" target="_blank">
                                 <img src="img/cv.png">
                             </a>
                         </div>
@@ -174,7 +174,7 @@
                             </div>
                             <div class="small-box">
                                 <div class="small-box-img">
-                                    <img src="img/microsoftsmall.png">
+                                    <img src="img/microsoft.png">
                                 </div>
                                 <div class="small-box-text">
                                     <h2 class="title">Microsoft</h2>
@@ -259,31 +259,31 @@
                     <div class="center-page-box-info">
                         <h2 class="title-text">portfolio</h2>
                         <div class="portfolio-grid">
-                            <div class="portfolio-item">
+                            <div class="portfolio-item" data-link="https://ar.christophergu.me">
                                 <img src="img/igeffects.png">
                                 <h3 class="portofolio-item-title">instagram effects</h3>
                             </div>
-                            <div class="portfolio-item">
+                            <div class="portfolio-item" data-link="https://devpost.com/Gooey">
                                 <img src="img/hackathonprojs.png">
                                 <h3 class="portofolio-item-title">hackathon projects</h3>
                             </div>
-                            <div class="portfolio-item">
+                            <div class="portfolio-item" data-link="">
                                 <img src="img/artdesign.png">
                                 <h3 class="portofolio-item-title">art &amp; design</h3>
                             </div>
-                            <div class="portfolio-item">
+                            <div class="portfolio-item" data-link="https://www.stoplite.io">
                                 <img src="img/startups.png">
                                 <h3 class="portofolio-item-title">startups</h3>
                             </div>
-                            <div class="portfolio-item">
+                            <div class="portfolio-item" data-link="https://www.youtube.com/channel/UCi6VFKxq1kOG468q9LYW38A">
                                 <img src="img/music.png">
                                 <h3 class="portofolio-item-title">music</h3>
                             </div>
-                            <div class="portfolio-item">
+                            <div class="portfolio-item" data-link="">
                                 <img src="img/photography.png">
                                 <h3 class="portofolio-item-title">photography</h3>
                             </div>
-                            <div class="portfolio-item">
+                            <div class="portfolio-item" data-link="">
                                 <img src="img/misc.png">
                                 <h3 class="portofolio-item-title">misc.</h3>
                             </div>
