--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Meta Information -->
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         
         <!-- for Google -->
@@ -50,12 +50,13 @@
             </div>
         </nav>
 
+        <!-- To make more of something, you esentially just need to copy/paste the large-box, small-box, portfolio-item divs and replace the relevant information -->
         <div class="slider-container">
             <div id="about" class="center-page-box">
                 <div class="center-page-box-info-container">
                     <div class="center-page-box-info">
                         <div class="me-img-container">
-                            <img class="me-img" src="img/chrisgu.jpg">
+                            <img class="me-img" src="img/chrisgu.png">
                         </div>
                         <h2 class="name title-text">christopher gu</h2>
                         <p class="gender">(he/him)</p>
@@ -88,6 +89,18 @@
                 <div class="center-page-box-info-container">
                     <div class="center-page-box-info">
                         <h2 class="title-text">education</h2>
+                        <!-- Education item template (Copy/paste to add more)
+                            <div class="large-box">
+                                <div class="large-box-img">
+                                    <img src="img/mst.png">
+                                </div>
+                                <div class="large-box-text">
+                                    <h2 class="title">Missouri University of Science &amp; Technology</h2>
+                                    <h3 class="subtitle">Bachelor of Science - BS, Computer Science, 3.86</h3>
+                                    <h4 class="extra-info">August 2016 - December 2020</h4>
+                                </div>
+                            </div>
+                        -->
                         <div class="large-box">
                             <div class="large-box-img">
                                 <img src="img/mst.png">
@@ -100,6 +113,17 @@
                         </div>
                         <h3 class="subtitle-text">extracurriculars</h3>
                         <div class="extracurricular-grid">
+                            <!-- Extracurricular items template (Copy/paste to add more)
+                                <div class="small-box">
+                                    <div class="small-box-img">
+                                        <img src="img/pickhacks.png">
+                                    </div>
+                                    <div class="small-box-text">
+                                        <h2 class="title">PickHacks</h2>
+                                        <h3 class="subtitle">Co-Founder, Co-Director</h3>
+                                    </div>
+                                </div>
+                            -->
                             <div class="small-box">
                                 <div class="small-box-img">
                                     <img src="img/pickhacks.png">
@@ -165,7 +189,7 @@
                             </div>
                             <div class="small-box">
                                 <div class="small-box-img">
-                                    <img src="img/mstsmall.png">
+                                    <img src="img/mst.png">
                                 </div>
                                 <div class="small-box-text">
                                     <h2 class="title">Missouri S&T CS</h2>
@@ -209,6 +233,18 @@
                     <div class="center-page-box-info">
                         <h2 class="title-text">experience</h2>
                         <div class="experiences-grid">
+                            <!-- Experience item template (Copy/paste to add more)
+                                <div class="large-box">
+                                    <div class="large-box-img">
+                                        <img src="img/microsoft.png">
+                                    </div>
+                                    <div class="large-box-text">
+                                        <h2 class="title">Microsoft Corporation</h2>
+                                        <h3 class="subtitle">Program/Product Manager</h3>
+                                        <h4 class="extra-info">March 2021</h4>
+                                    </div>
+                                </div>
+                            -->
                             <div class="large-box">
                                 <div class="large-box-img">
                                     <img src="img/microsoft.png">
@@ -259,6 +295,12 @@
                     <div class="center-page-box-info">
                         <h2 class="title-text">portfolio</h2>
                         <div class="portfolio-grid">
+                            <!-- Portfolio item template (Copy/paste to add more)
+                                <div class="portfolio-item" data-link="https://ar.christophergu.me">
+                                    <img src="img/igeffects.png">
+                                    <h3 class="portofolio-item-title">instagram effects</h3>
+                                </div>
+                            -->
                             <div class="portfolio-item" data-link="https://ar.christophergu.me">
                                 <img src="img/igeffects.png">
                                 <h3 class="portofolio-item-title">instagram effects</h3>
@@ -297,6 +339,18 @@
                     <div class="center-page-box-info">
                         <h2 class="title-text">press</h2>
                         <div class="press-grid">
+                            <!-- Portfolio item template (Copy/paste to add more)
+                                <div class="large-box" data-link="https://www.umsystem.edu/stories/winners-chang-lin-tien-scholarships-announced">
+                                    <div class="large-box-img">
+                                        <img src="img/presschanglinscholarship.png">
+                                    </div>
+                                    <div class="large-box-text">
+                                        <h2 class="title">Winners of Chang-Lin Tien Scholarships Announced</h2>
+                                        <h3 class="subtitle">Fund to support exceptional, civic-minded students. </h3>
+                                        <h4 class="extra-info">umsystem.edu</h4>
+                                    </div>
+                                </div>
+                            -->
                             <div class="large-box" data-link="https://www.umsystem.edu/stories/winners-chang-lin-tien-scholarships-announced">
                                 <div class="large-box-img">
                                     <img src="img/presschanglinscholarship.png">
