--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="ml-auto navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">about</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#services">services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#portfolio">portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#press">press</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#clients"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#press"></a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -89,34 +89,7 @@
             </div>
         </div>
 
-        <div id="services" class="center-page-box">
-            <h2 class="title-text">services</h2>
-            <div class="service-grid">
-                <div class="service-item">
-                    <div class="service-img">
-                        <img src="img/purplelogo.png">
-                    </div>
-                    <h3>templated effects</h3>
-                    <p>A branded/slightly modified copy of a pre-existing filter. The options are limited to ONLY my personal filters.</p>
-                </div>
-                <div class="service-item">
-                    <div class="service-img">
-                        <img src="img/pinklogo.png">
-                    </div>
-                    <h3>custom effects</h3>
-                    <p>A unique custom filter of your choice. We work together to develop/propose ideas adpated to your requirements.</p>
-                </div>
-                <div class="service-item">
-                    <div class="service-img">
-                        <img src="img/orangelogo.png">
-                    </div>
-                    <h3>marketing & distribution</h3>
-                    <p>Creation & execution of a plan to distribute, broadcast your effect to both of our networks & insta in general.</p>
-                </div>
-            </div>
-        </div>
-
-        <div id="portfolio" class="center-page-box">
+        <!-- <div id="portfolio" class="center-page-box">
             <h2 class="title-text">portfolio</h2>
             <div class="tabs">
                 <a href="#all"></a>
@@ -587,6 +560,59 @@
                     </div>
                 </div>
             </div>
+        </div> -->
+
+        <div id="clients" class="center-page-box">
+            <h2 class="title-text">clients</h2>
+            <h6 class="subtitle-text">here a few brands and companies I have either partnered with and/or created AR filters for</h6>
+            <div class="client-gallery">
+                <img src="img/company 1.png" data-link="https://www.instagram.com/popyourpup/" />
+                <img src="img/company 2.png" data-link="https://www.instagram.com/blkgirlsapparel/" />
+                <img src="img/company 3.png" data-link="https://www.instagram.com/neverhaveievergame/" />
+                <img src="img/company 4.png" data-link="https://www.instagram.com/gibberish_official/" />
+                <img src="img/company 5.png" data-link="https://www.instagram.com/cookierun/" />
+                <img src="img/company 6.png" data-link="https://www.instagram.com/play_yas/" />
+                <img src="img/company 7.png" data-link="https://www.instagram.com/outintech/" />
+            </div>
+        </div>
+
+        <div id="services" class="center-page-box">
+            <h2 class="title-text">services</h2>
+            <div class="service-grid">
+                <div class="service-item">
+                    <div class="service-img">
+                        <img src="img/purplelogo.png">
+                    </div>
+                    <h3>templated effects</h3>
+                    <p>A branded/slightly modified copy of a pre-existing filter. The options are limited to ONLY my personal filters.</p>
+                </div>
+                <div class="service-item">
+                    <div class="service-img">
+                        <img src="img/pinklogo.png">
+                    </div>
+                    <h3>custom effects</h3>
+                    <p>A unique custom filter of your choice. We work together to develop/propose ideas adpated to your requirements.</p>
+                </div>
+                <div class="service-item">
+                    <div class="service-img">
+                        <img src="img/orangelogo.png">
+                    </div>
+                    <h3>marketing & distribution</h3>
+                    <p>Creation & execution of a plan to distribute, broadcast your effect to both of our networks & insta in general.</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="contact" class="center-page-box">
+            <h2 class="title-text">want an ar effect?</h2>
+            <h6 class="subtitle-text" style="max-width: none;"><span style="font-weight: 900;">submit an inquiry and get a quote!</span> we look forward to working with you!</h6>
+            <form>
+                <input name="name" placeholder="your name" />
+                <input name="email" type="email" placeholder="your email" />
+                <input name="company" placeholder="your brand/company" />
+                <textarea name="idea" placeholder="your idea"></textarea>
+                <button>get a quote</button>
+            </form>
         </div>
 
         <div id="press" class="center-page-box">
