--- a/index.html
+++ b/index.html
@@ -853,6 +853,23 @@
             </div>
         </div>
 
+        <div id="social" class="center-page-box">
+            <div class="icons">
+                <a href="https://www.instagram.com/gu_christopher/" target="_blank">
+                    <img src="img/instagram.png" />
+                </a>
+                <a href="https://www.linkedin.com/in/christopherlgu/" target="_blank">
+                    <img src="img/linkedin.png" />
+                </a>
+                <a href="https://www.tiktok.com/@gu_christopher" target="_blank">
+                    <img src="img/tiktok.png" />
+                </a>
+                <a href="https://twitter.com/gu_christopher" target="_blank">
+                    <img src="img/twitter.png" />
+                </a>
+            </div>
+        </div>
+
         <div class="copyright"><h2 class="copyright-text">&#169;2020 Christopher Gu</h2></div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
