--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                     <img src="img/gallery 8.png" />
                     <img src="img/gallery 9.png" />
                 </div>
-                <div class="gallery-buttons"></div>
+                <div class="gallery-buttons">
+                    <button class="prev"><img src="img/left-arrow.png" /></button>
+                    <button class="next"><img src="img/right-arrow.png" /></button>
+                </div>
             </div>
         </div>
 
