--- a/index.html
+++ b/index.html
@@ -969,6 +969,20 @@
 
         <div class="copyright"><h2 class="copyright-text">&#169;2020 Christopher Gu</h2></div>
 
+        <div class="form-popup">
+            <div class="popup confirm">
+                <img src="img/confirm-checkmark.png" />
+                <h1 class="title">thank you!</h1>
+                <h5 class="subtitle">your form has been successfully submitted</h5>
+                <h6 class="description"><strong>you should hear back within <span>24 hours</span>!</strong><br /> and while you're here, feel free to check out my <span>press</span> and <span>social media</span> channels below</h6>
+            </div>
+            <div class="popup failed">
+                <img src="img/failed-x.png" />
+                <h1 class="title">something went wrong!</h1>
+                <h5 class="subtitle">your form was not submitted - please <span>refresh and try again</span>!</h5>
+            </div>
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
