--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <p class="sub-text">impressions ("views")</p>
                     </div>
                 </div>
-                <div class="filter-highlight">
+                <div class="filter-highlight" data-link="https://www.instagram.com/ar/1389950081213935/">
                     <h2 class="filter-header">
                         <span>48 million</span> impressions
                     </h2>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="filter-highlight">
+                <div class="filter-highlight" data-link="https://www.instagram.com/ar/272716847076047/">
                     <h2 class="filter-header">
                         <span>52 million</span> impressions
                     </h2>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="filter-highlight">
+                <div class="filter-highlight" data-link="https://www.instagram.com/ar/529967291024041/">
                     <h2 class="filter-header">
                         <span>3.8 billion</span> impressions
                     </h2>
