--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
         </div>
 
         <div id="portfolio" class="center-page-box">
-            <h2 class="title-text">portfolio</h2>
+            <div class="title-text">
+                <h2> </h2>
+                <h2>portfolio</h2>
+                <div style="display: flex;">
+                    <button>view <span style="font-style: italic; text-decoration: underline;">full</span> portfolio</button>
+                </div>
+            </div>
             <div class="portfolio-content">
                 <p>
                     my specialty of creating <span>simple</span>, <span>viral</span>, and <span>interactive</span> ar filters has catapulted me to become one of the <span>top ar creators</span> on instagram
