--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link" href="#press"></a>
                     </li>
                     <li class="nav-item quote-button">
-                        <a class="nav-link" href="">get a quote</a>
+                        <a class="nav-link" href="#contact">get a quote</a>
                     </li>
                 </ul>
             </div>
