--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <!-- Fullpage JS CSS -->
+    <link rel="stylesheet" type="text/css" href="css/fullpage.min.css" />
     
     <!-- Main Site Styling -->
     <link rel="stylesheet" href="css/style.css">
@@ -41,124 +44,168 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand desktop" href="#home">STELL-AR</a>
-      <a class="navbar-brand mobile" href="#home"><img src="img/logo.png" /></a>
+      <a class="navbar-brand desktop" onclick="fullpage_api.moveTo('landing')">STELL-AR</a>
+      <a class="navbar-brand mobile" onclick="fullpage_api.moveTo('landing')"><img src="img/logo.png" /></a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="ml-auto navbar-nav">
           
         </ul>
       </div>
     </nav>
-    <div id="landing" class="site-section">
-      <div class="section-container">
-        <div class="section-info">
-          <h1>STELL-AR</h1>
-          <ul>
-            <li>
-              <a>About</a>
-            </li>
-            <li>
-              <a>Clients</a>
-            </li>
-            <li>
-              <a>Work</a>
-            </li>
-            <li>
-              <a>Press</a>
-            </li>
-            <li>
-              <a>Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <img src="img/downarrow.png" />
-    </div>
-    <div id="about1" class="site-section">
-      <div class="section-container">
-        <div class="section-info">
-          <h1>We fashion viral IG AR experiences.</h1>
-          <p class="description">“In the business of creating <span>awe</span> and <span>envy</span>, <span>clicks</span> and <span>conversions</span>, with <span>speed</span> and at <span>scale</span>.”</p>
-        </div>
-      </div>
-    </div>
-    <div id="about2" class="site-section">
-      <div class="section-container">
-        <div class="section-info">
-          <h1>5,000,000,000+</h1>
-          <h2>views. yup, <i style="text-decoration: underline;">billions</i>.</h2>
-          <p class="description">Our Instagram effects were <span>one of the first to successfully platform jump to TikTok</span> and explode in popularity.</p>
-        </div>
-      </div>
-    </div>
-    <div id="work" class="site-section">
-      <div class="section-container">
-        <div class="section-info">
-          <h1>Our work.</h1>
-          <div class="work-grid">
-            <img src="img/song associaiton.png" />
-            <img src="img/guess the gibbeirsh.png" />
-            <img src="img/head beat.png" />
-            <img src="img/mandela effect.png" />
-            <img src="img/never have i ever.png" />
-            <img src="img/twist the tongue.png" />
-            <img src="img/slit scan.png" />
-            <img src="img/word scramble.png" />
-            <img src="img/among us.png" />
+    <div id="fullpage">
+      <div class="landing site-section section">
+        <div class="section-container">
+          <div class="section-info">
+            <h1>STELL-AR</h1>
+            <ul>
+              <li>
+                <a onclick="fullpage_api.moveTo('about1')">About</a>
+              </li>
+              <li>
+                <a onclick="fullpage_api.moveTo('work')">Work</a>
+              </li>
+              <li>
+                <a onclick="fullpage_api.moveTo('clients')">Clients</a>
+              </li>
+              <li>
+                <a onclick="fullpage_api.moveTo('landing')">Press</a>
+              </li>
+              <li>
+                <a onclick="fullpage_api.moveTo('contact')">Contact</a>
+              </li>
+            </ul>
           </div>
-          <p class="description">View our full portfolio <span style="text-decoration: underline;">here</span>.</p>
         </div>
+        <a onclick="fullpage_api.moveTo('about1')"><img class="downarrow" src="img/downarrow.png" /></a>
       </div>
-    </div>
-    <div id="clients" class="site-section">
-      <div class="section-container">
-        <div class="section-info">
-          <h1>Clients n' collabs.</h1>
-          <div class="client-grid">
-            <img src="img/client 1.png" />
-            <img src="img/client 2.png" />
-            <img src="img/client 3.png" />
-            <img src="img/client 4.png" />
-            <img src="img/client 5.png" />
-            <img src="img/client 6.png" />
-            <img src="img/client 7.png" />
-            <img src="img/client 8.png" />
-          </div>
-          <p class="description">We have worked with brands, influencers, and <span>everything in-between</span>!</p>
-        </div>
-      </div>
-    </div>
-    <div id="services" class="site-section">
-      <div class="section-container">
-        <div class="section-info">
-          <h1>How we can help.</h1>
-          <div class="service-grid">
-            <div class="service">
-              <h4>Templated</h4>
-              <p>A branded/modified copy of a pre-existing effect from our portfolio. Note, this excludes gibberish.</p>
-            </div>
-            <div class="service">
-              <h4>Custom</h4>
-              <p>We will work with you to create a unique, custom effect that fulfills all of your needs & requirements.</p>
-            </div>
-            <div class="service">
-              <h4>Distribution</h4>
-              <p>Creation & execution of a plan to market and broadcast your new effect on social media.</p>
-            </div>
+      <div class="about1 site-section section">
+        <div class="section-container">
+          <div class="section-info">
+            <h1>We fashion viral IG AR experiences.</h1>
+            <p class="description">“In the business of creating <span>awe</span> and <span>envy</span>, <span>clicks</span> and <span>conversions</span>, with <span>speed</span> and at <span>scale</span>.”</p>
           </div>
         </div>
       </div>
-    </div>
-    <div id="contact" class="site-section">
-      <div class="section-container">
-        <div class="section-info">
-          <h1>Get in touch.</h1>
-          <form>
-            <input placeholder="Name*">
-            <input placeholder="Email*">
-            <textarea placeholder="Message*"></textarea>
-            <button>Submit</button>
-          </form>
+      <div class="about2 site-section section">
+        <div class="section-container">
+          <div class="section-info">
+            <h1>5,000,000,000+</h1>
+            <h2>views. yup, <i style="text-decoration: underline;">billions</i>.</h2>
+            <p class="description">Our Instagram effects were <span>one of the first to successfully platform jump to TikTok</span> and explode in popularity.</p>
+          </div>
+        </div>
+      </div>
+      <div class="work site-section section">
+        <div class="section-container">
+          <div class="section-info">
+            <h1>Our work.</h1>
+            <div class="work-grid">
+              <img
+                src="img/song associaiton.png"
+                data-title-text="song association"
+                data-title-color="#1DB954"
+                data-impressions="14,393,476"
+                data-captures="8,548,305"
+                data-opens="14,358,425"
+                data-shares="572,913"
+                data-description="Inspired by the popular ELLE YouTube series, 'song association' prompts the user to sing a song using a word that has been randomly chosen for them. A voice effect option has also been added for versatility and humour."
+                data-video-link="img/guess the gibberish.mov" />
+              <img src="img/guess the gibbeirsh.png" />
+              <img src="img/head beat.png" />
+              <img src="img/mandela effect.png" />
+              <img src="img/never have i ever.png" />
+              <img src="img/twist the tongue.png" />
+              <img src="img/slit scan.png" />
+              <img src="img/word scramble.png" />
+              <img src="img/among us.png" />
+            </div>
+            <p class="description">View our full portfolio <span style="text-decoration: underline;">here</span>.</p>
+          </div>
+
+          <div id="work-popup">
+            <div class="popup-header">
+              <img class="close-popup" src="img/exit button.png" />
+            </div>
+            <div class="content">
+              <div class="data">
+                <h1 class="title">default</h1>
+                <div class="data-grid">
+                  <div class="data-grid-item">
+                    <h3 class="impressions"></h3>
+                    <h4>impressions</h4>
+                  </div>
+                  <div class="data-grid-item">
+                    <h3 class="captures"></h3>
+                    <h4>captures</h4>
+                  </div>
+                  <div class="data-grid-item">
+                    <h3 class="opens"></h3>
+                    <h4>opens</h4>
+                  </div>
+                  <div class="data-grid-item">
+                    <h3 class="shares"></h3>
+                    <h4>shares</h4>
+                  </div>
+                </div>
+                <p class="description"></p>
+              </div>
+              <div class="demo">
+                <video controls></video>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="clients site-section section">
+        <div class="section-container">
+          <div class="section-info">
+            <h1>Clients n' collabs.</h1>
+            <div class="client-grid">
+              <img src="img/client 1.png" />
+              <img src="img/client 2.png" />
+              <img src="img/client 3.png" />
+              <img src="img/client 4.png" />
+              <img src="img/client 5.png" />
+              <img src="img/client 6.png" />
+              <img src="img/client 7.png" />
+              <img src="img/client 8.png" />
+            </div>
+            <p class="description">We have worked with brands, influencers, and <span>everything in-between</span>!</p>
+          </div>
+        </div>
+      </div>
+      <div class="services site-section section">
+        <div class="section-container">
+          <div class="section-info">
+            <h1>How we can help.</h1>
+            <div class="service-grid">
+              <div class="service">
+                <h4>Templated</h4>
+                <p>A branded/<wbr />modified copy of a pre-existing effect from our portfolio. Note, this excludes gibberish.</p>
+              </div>
+              <div class="service">
+                <h4>Custom</h4>
+                <p>We will work with you to create a unique, custom effect that fulfills all of your needs & requirements.</p>
+              </div>
+              <div class="service">
+                <h4>Distribution</h4>
+                <p>Creation & execution of a plan to market and broadcast your new effect on social media.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contact site-section section">
+        <div class="section-container">
+          <div class="section-info">
+            <h1>Get in touch.</h1>
+            <form>
+              <input placeholder="Name*">
+              <input placeholder="Email*">
+              <textarea placeholder="Message*"></textarea>
+              <button>Submit</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
@@ -166,5 +213,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/fullpage.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
