--- a/index.html
+++ b/index.html
@@ -48,7 +48,21 @@
       <a class="navbar-brand mobile" onclick="fullpage_api.moveTo('landing')"><img src="img/logo.png" /></a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="ml-auto navbar-nav">
-          
+          <li class="nav-item">
+            <a class="nav-link" onclick="fullpage_api.moveTo('about1')">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" onclick="fullpage_api.moveTo('work')">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" onclick="fullpage_api.moveTo('clients')">Clients</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" onclick="fullpage_api.moveTo('landing')">Press</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" onclick="fullpage_api.moveTo('contact')">Contact</a>
+          </li>
         </ul>
       </div>
     </nav>
