--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             <a class="nav-link" onclick="fullpage_api.moveTo('landing')">Press</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" onclick="fullpage_api.moveTo('services')">Services</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" onclick="fullpage_api.moveTo('contact')">Contact</a>
           </li>
         </ul>
@@ -85,6 +88,9 @@
                 <a onclick="fullpage_api.moveTo('landing')">Press</a>
               </li>
               <li>
+                <a onclick="fullpage_api.moveTo('services')">Services</a>
+              </li>
+              <li>
                 <a onclick="fullpage_api.moveTo('contact')">Contact</a>
               </li>
             </ul>
@@ -103,7 +109,7 @@
       <div class="about2 site-section section">
         <div class="section-container">
           <div class="section-info">
-            <h1>5,000,000,000+</h1>
+            <h1 class="views"></h1>
             <h2>views. yup, <i style="text-decoration: underline;">billions</i>.</h2>
             <p class="description">Our Instagram effects were <span>one of the first to successfully platform jump to TikTok</span> and explode in popularity.</p>
           </div>
